Atualização do Swagger e correção de bugs
